--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,10 @@
 
 .container {
     display: flex;
-    justify-content: center; /* Centers the items */
-    gap: 200px; /* Space between items */
-    font-weight: bold;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
